noinst_LIBRARIES = libglyphs.a
libglyphs_a_SOURCES = \
	glyph.cpp \
	paragraphglyph.cpp \
	textglyph.cpp \
	breakglyph.cpp \
	fontglyph.cpp \
	fontsizeglyph.cpp

noinst_HEADERS = \
	glyphs.h \
	glyph.h \
	paragraphglyph.h \
	textglyph.h \
	breakglyph.h \
	fontglyph.h \
	fontsizeglyph.h

libglyphs_a_CXXFLAGS =
