noinst_LIBRARIES = libnodes.a
libnodes_a_SOURCES = \
	objnode.cpp \
	xrefnode.cpp \
	mapnode.cpp \
	stringnode.cpp \
	namenode.cpp \
	refnode.cpp \
	numbernode.cpp \
	treenode.cpp

noinst_HEADERS = \
	objnode.h \
	xrefnode.h \
	mapnode.h \
	stringnode.h \
	namenode.h \
	refnode.h \
	numbernode.h \
	treenode.h

libnodes_a_CXXFLAGS = -I..