noinst_LIBRARIES = libnodes.a
libnodes_a_SOURCES = \
	objnode.cpp \
	xrefnode.cpp \
	mapnode.cpp \
	stringnode.cpp \
	namenode.cpp \
	refnode.cpp \
	numbernode.cpp \
	treenode.cpp \
	arraynode.cpp \
	rootnode.cpp \
	booleannode.cpp \
	commandnode.cpp

noinst_HEADERS = \
	objnode.h \
	xrefnode.h \
	mapnode.h \
	stringnode.h \
	namenode.h \
	refnode.h \
	numbernode.h \
	treenode.h \
	arraynode.h \
	rootnode.h \
	booleannode.h \
	commandnode.h \
	nodes.h

libnodes_a_CXXFLAGS = -I..
AM_CXXFLAGS = $(OPENMP_CXXFLAGS)
